# dcase2024_task2

./: .gitignore  README.md  main  main.py  main_statex+featex.py  openl3_idea_aug_layer_classwise.py  pyproject.toml  statex_aug_layer_classwise.py  subcluster_adacos.py
configs/: train.yaml
configs/path/: dcase.yaml
data/: data_manager.py  data_processing.ipynb
